# rust-task

./: .env.example  Cargo.toml
migrations/2023-11-09-104959_create_tasks/: up.sql
src/: models.rs  schema.rs
